Added UI elements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <!-- placeholder strings -->
     <string name="artist_placeholder">Artist</string>
     <string name="track_placeholder">Track</string>
+    <string name="album_placeholder">Album</string>
 </resources>
