--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <resources>
     <string name="app_name">Spotify Streamer</string>
     <string name="top_ten_tracks">Top 10 Tracks</string>
-
+    <string name="search_hint">Search artists</string>
     <string name="action_settings">Settings</string>
+    <string name="search">Search</string>
 
     <!-- placeholder strings -->
     <string name="artist_placeholder">Artist</string>
     <string name="track_placeholder">Track</string>
     <string name="album_placeholder">Album</string>
+
+    <string name="empty_artist_list">Search for an artist</string>
 </resources>
