--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,25 @@
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!--titles -->
     <string name="app_name">Spotify Streamer</string>
     <string name="top_ten_tracks">Top 10 Tracks</string>
     <string name="search_hint">Search artists</string>
     <string name="action_settings">Settings</string>
     <string name="search">Search</string>
+    <string name="title_activity_track_player">Track Player</string>
 
     <!-- placeholder strings -->
     <string name="artist_placeholder">Artist</string>
     <string name="track_placeholder">Track</string>
     <string name="album_placeholder">Album</string>
-
     <string name="empty_artist_list">Search for an artist</string>
-    <string name="title_activity_track_player">TrackPlayerActivity</string>
-    <string name="hello_world">Hello world!</string>
+
+    <!-- media player strings -->
+    <string name="now_playing">Now playing...</string>
+
+    <!--string for formatting track duration-->
+    <string name="format_track_duration">
+        <xliff:g id="minutes">%02d</xliff:g>
+        :
+        <xliff:g id="seconds">%02d</xliff:g>
+    </string>
 </resources>
