--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,6 @@
     <string name="album_placeholder">Album</string>
     <string name="empty_artist_list">Search for an artist</string>
 
-    <!-- media player strings -->
-    <string name="now_playing">Now playing...</string>
-
     <!--string for formatting track duration-->
     <string name="format_track_duration">
         <xliff:g id="minutes">%02d</xliff:g>
@@ -36,4 +33,11 @@
     <string name="pref_country_code_key" translatable="false">countryCode</string>
     <string name="pref_country_code_label">Country Code</string>
     <string name="pref_country_code_default">US</string>
+
+    <!--media player notification strings-->
+    <string name="now_playing">Now playing...</string>
+    <string name="msg_previous">Previous</string>
+    <string name="msg_pause">Pause</string>
+    <string name="msg_resume">Resume</string>
+    <string name="msg_next">Next</string>
 </resources>
